--- a/TheIsle/Game.ini
+++ b/TheIsle/Game.ini
@@ -1,18 +1,13 @@
 [/Script/TheIsle.TIGameStateBase]
-AdminsSteamIDs=76561198124357311
+AdminsSteamIDs=YourSteamID
 
 [/Script/TheIsle.TIGameSession]
-ServerName=Servernamenhere
-MaxPlayerCount=75
-bServerGlobalChat=true
-bServerNesting=true
-bServerFallDamage=true
-bServerAllowReplayRecording=false
-bServerDynamicTimeOfDay=true
-ServerTimeOfDayInSeconds=21600
-ServerLengthOfDayInSeconds=3600
-bServerDynamicWeather=true
+ServerName=ServerNameHere
+MaxPlayerCount=Amount
+bEnableGlobalChat=true
+bGlobalIsSpeciesOnly=false
+bLocalIsSpeciesOnly=true
+LocalChatRange=20000.f
 
 [/Script/Engine.GameSession]
-MaxPlayers=80
-
+MaxPlayers=Amount
