--- a/TheIsle/Engine.ini
+++ b/TheIsle/Engine.ini
@@ -6,13 +6,17 @@ Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
 Paths=../../../Engine/Plugins/Runtime/AudioSynesthesia/Content
 Paths=../../../Engine/Plugins/Runtime/WebBrowserWidget/Content
 Paths=../../../Engine/Plugins/FX/Niagara/Content
-Paths=../../../TheIsle/Plugins/SteamCore/Content
+Paths=../../../Engine/Plugins/Experimental/PythonScriptPlugin/Content
 Paths=../../../TheIsle/Plugins/RVTObjectLandscapeBlending/Content
-Paths=../../../TheIsle/Plugins/DonMeshPainting/Content
-Paths=../../../Engine/Plugins/Marketplace/Voxel/Content
+Paths=../../../TheIsle/Plugins/DLSS/Content
 Paths=../../../TheIsle/Plugins/UIPF/Content
-Paths=../../../TheIsle/Plugins/EOSCore/Content
-Paths=../../../TheIsle/Plugins/IKinema/Content
+Paths=../../../Engine/Plugins/Experimental/ControlRig/Content
+Paths=../../../TheIsle/Plugins/SkinnedDecalComponent/Content
+Paths=../../../TheIsle/Plugins/DLSSMoviePipelineSupport/Content
+Paths=../../../Engine/Plugins/MovieScene/MovieRenderPipeline/Content
+Paths=../../../Engine/Plugins/Compositing/OpenColorIO/Content
+Paths=../../../Engine/Plugins/MovieScene/SequencerScripting/Content
+Paths=../../../TheIsle/Plugins/EOSOnlineSubsystem/Content
 Paths=../../../TheIsle/Plugins/ImpostorBaker/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Developer/AnimationSharing/Content
@@ -27,26 +31,36 @@ Paths=../../../Engine/Plugins/Experimental/ChaosNiagara/Content
 Paths=../../../Engine/Plugins/Experimental/MotoSynth/Content
 Paths=../../../Engine/Plugins/MagicLeap/MagicLeapPassableWorld/Content
 Paths=../../../Engine/Plugins/Media/MediaCompositing/Content
+Paths=../../../Engine/Plugins/Runtime/OpenXREyeTracker/Content
+Paths=../../../Engine/Plugins/Runtime/OpenXR/Content
+Paths=../../../Engine/Plugins/Runtime/OpenXRHandTracking/Content
+Paths=../../../Engine/Plugins/VirtualProduction/Takes/Content
+Paths=../../../Engine/Plugins/AI/MassAI/Content
+Paths=../../../Engine/Plugins/Animation/ControlRigSpline/Content
+Paths=../../../Engine/Plugins/Animation/ControlRig/Content
+Paths=../../../Engine/Plugins/Animation/IKRig/Content
+Paths=../../../Engine/Plugins/Bridge/Content
+Paths=../../../Engine/Plugins/Editor/BlueprintHeaderView/Content
+Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
+Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
+Paths=../../../Engine/Plugins/Enterprise/GLTFExporter/Content
+Paths=../../../Engine/Plugins/Experimental/ChaosCaching/Content
+Paths=../../../Engine/Plugins/Experimental/Dataflow/Content
+Paths=../../../Engine/Plugins/Experimental/FullBodyIK/Content
+Paths=../../../Engine/Plugins/Experimental/UVEditor/Content
+Paths=../../../Engine/Plugins/Media/MediaPlate/Content
+Paths=../../../Engine/Plugins/Runtime/AudioWidgets/Content
+Paths=../../../Engine/Plugins/Runtime/GeometryProcessing/Content
+Paths=../../../Engine/Plugins/Runtime/MassEntity/Content
+Paths=../../../Engine/Plugins/Runtime/MassGameplay/Content
+Paths=../../../Engine/Plugins/Runtime/Metasound/Content
+Paths=../../../Engine/Plugins/Runtime/ResonanceAudio/Content
+Paths=../../../Engine/Plugins/Runtime/SmartObjects/Content
+Paths=../../../Engine/Plugins/Runtime/StateTree/Content
+Paths=../../../Engine/Plugins/Runtime/WaveTable/Content
+Paths=../../../Engine/Plugins/Runtime/ZoneGraphAnnotations/Content
+Paths=../../../TheIsle/Plugins/Tether/Content
 
-[OnlineSubsystem]
-PollingIntervalInMs=15
-
-[/script/onlinesubsystemsteam.steamnetdriver]
-MaxClientRate=12800
-MaxInternetClientRate=12800
-MaxNetTickRate=128
-NetServerMaxTickRate=128
-LanServerMaxTickRate=128
-NetClientTicksPerSecond=128
-
-[/script/onlinesubsystemutils.ipnetdriver]
-MaxClientRate=12800
-MaxInternetClientRate=12800
-MaxNetTickRate=128
-NetServerMaxTickRate=128
-LanServerMaxTickRate=128
-NetClientTicksPerSecond=128
-
-[/script/engine.engine]
-NetClientTicksPerSecond=128.000000
-
+[EpicOnlineServices]
+DedicatedServerClientId=xyza7891gk5PRo3J7G9puCJGFJjmEguW
+DedicatedServerClientSecret=pKWl6t5i9NJK8gTpVlAxzENZ65P8hYzodV8Dqe5Rlc8
