--- a/TheIsle/Game.ini
+++ b/TheIsle/Game.ini
@@ -1,13 +1,94 @@
-[/Script/TheIsle.TIGameStateBase]
-AdminsSteamIDs=YourSteamID
-
 [/Script/TheIsle.TIGameSession]
-ServerName=ServerNameHere
-MaxPlayerCount=Amount
-bEnableGlobalChat=true
-bGlobalIsSpeciesOnly=false
-bLocalIsSpeciesOnly=true
-LocalChatRange=20000.f
+ServerName=""
+MapName=Gateway
+MaxPlayerCount=75
+bEnableHumans=false
+bQueueEnabled=true
+QueuePort=9998
+bServerPassword=false
+ServerPassword=
+bRconEnabled=true
+RconPassword=
+RconPort=
+bServerDynamicWeather=true
+ServerDayLengthMinutes=45
+ServerNightLengthMinutes=20
+bServerWhitelist=false
+bEnableGlobalChat=false
+bSpawnPlants=true
+bSpawnAI=true
+AISpawnInterval=40
+bEnableMigration=true
+MaxMigrationTime=5400
+GrowthMultiplier=1
+bEnableMutations=true
 
-[/Script/Engine.GameSession]
-MaxPlayers=Amount
+[/Script/TheIsle.TIGameStateBase]
+AdminsSteamIDs=
+WhitelistIDs=
+AllowedClasses=Hypsilophodon
+AllowedClasses=Pachycephalosaurus
+AllowedClasses=Stegosaurus
+AllowedClasses=Tenontosaurus
+AllowedClasses=Carnotaurus
+AllowedClasses=Ceratosaurus
+AllowedClasses=Deinosuchus
+AllowedClasses=Diabloceratops
+AllowedClasses=Omniraptor
+AllowedClasses=Pteranodon
+AllowedClasses=Troodon
+AllowedClasses=Beipiaosaurus
+AllowedClasses=Gallimimus
+AllowedClasses=Dilophosaurus
+AllowedClasses=Herrerasaurus
+AllowedClasses=Tyrannosaurus
+
+// List of all enabled mutations and values. Keep commented out to have all mutations enabled. Enabling any mutations means you must include all mutations you would like available on your server. Listed below are all modifiable mutations with default values. Altering these values may produce unstable gameplay.
+// EnabledMutations=(MutationName=Hemomania,EffectValue=0.05)
+// EnabledMutations=(MutationName=Hematophagy,EffectValue=0.25)
+// EnabledMutations=(MutationName=Accelerated Prey Drive,EffectValue=0.1)
+// EnabledMutations=(MutationName=Xerocole Adaptation,EffectValue=0.2)
+// EnabledMutations=(MutationName=Hypervigilance,EffectValue=0.5)
+// EnabledMutations=(MutationName=Truculency,EffectValue=0.2)
+// EnabledMutations=(MutationName=Osteophagic,EffectValue=0.15)
+// EnabledMutations=(MutationName=Photosynthetic Regeneration,EffectValue=0.1)
+// EnabledMutations=(MutationName=Cellular Regeneration,EffectValue=0.15)
+// EnabledMutations=(MutationName=Advanced Gestation,EffectValue=0.5)
+// EnabledMutations=(MutationName=Sustained Hydration,EffectValue=0.2)
+// EnabledMutations=(MutationName=Enlarged meniscus,EffectValue=0.15)
+// EnabledMutations=(MutationName=Efficient Digestion,EffectValue=0.2)
+// EnabledMutations=(MutationName=Featherweight EffectValue=0.5)
+// EnabledMutations=(MutationName=Osteosclerosis,EffectValue=0.2)
+// EnabledMutations=(MutationName=Wader,EffectValue=0.25)
+// EnabledMutations=(MutationName=Epidermal Fibrosis,EffectValue=0.15)
+// EnabledMutations=(MutationName=Congenital Hypoalgesia,EffectValue=0.15)
+// EnabledMutations=(MutationName=Photosynthetic Tissue,EffectValue=0.05)
+// EnabledMutations=(MutationName=Nocturnal,EffectValue=0.05)
+// EnabledMutations=(MutationName=Hydroregenerative,EffectValue=0.25)
+// EnabledMutations=(MutationName=Increased Inspiratory Capacity,EffectValue=0.15)
+// EnabledMutations=(MutationName=Hydrodynamic,EffectValue=0.15)
+// EnabledMutations=(MutationName=Submerged Optical Retention,EffectValue=0.05)
+// EnabledMutations=(MutationName=Infrasound Communication,EffectValue=0.5)
+// EnabledMutations=(MutationName=Augmented Tapetum,EffectValue=0.5)
+// EnabledMutations=(MutationName=Hypermetabolic Inanition,EffectValue=0.15)
+// EnabledMutations=(MutationName=Tactile Endurance,EffectValue=0.5)
+// EnabledMutations=(MutationName=Gastronomic Regeneration,EffectValue=0.1)
+// EnabledMutations=(MutationName=Heightened Ghrelin,EffectValue=0.25)
+// EnabledMutations=(MutationName=Prolific Reproduction,EffectValue=0.1)
+// EnabledMutations=(MutationName=Enhanced Digestion,EffectValue=0.1)
+// EnabledMutations=(MutationName=Reinforced Tendons,EffectValue=0.1)
+// EnabledMutations=(MutationName=Multichambered Lungs,EffectValue=0.05)
+// EnabledMutations=(MutationName=Reabsorption,EffectValue=1) ****** // Value must be 1 or remove from this list to disable it.
+// EnabledMutations=(MutationName=Cannibalistic,EffectValue=1) ******// Value must be 1 or remove from this list to disable it.
+// EnabledMutations=(MutationName=Barometric Sensitivity,EffectValue=1) ******// Value must be 1 or remove from this list to disable it.
+// EnabledMutations=(MutationName=Social Behavior,EffectValue=1) *****// Value must be 1 or remove from this list to disable it.
+// EnabledMutations=(MutationName=Traumatic Thrombosis,EffectValue=1) *****// Value must be 1 or remove from this list to disable it.
+// EnabledMutations=(MutationName=Reniculate Kidneys,EffectValue=1) *****// Value must be 1 or remove from this list to disable it.
+
+// Add the names of each AI class that should be disabled, one line for each.
+// DisallowedAIClasses=Compsognathus
+// DisallowedAIClasses=Pterodactylus
+// DisallowedAIClasses=Boar
+// DisallowedAIClasses=Deer
+// DisallowedAIClasses=Goat
+// DisallowedAIClasses=Seaturtle
