--- a/TheIsle/Game.ini
+++ b/TheIsle/Game.ini
@@ -1,31 +1,57 @@
 [/Script/TheIsle.TIGameSession]
-ServerName=""
+ServerName="Server name here" // Server name.
 MapName=Gateway
-MaxPlayerCount=75
-bEnableHumans=false
-bQueueEnabled=true
-QueuePort=9998
-bServerPassword=false
-ServerPassword=
-bRconEnabled=true
-RconPassword=
-RconPort=
-bServerDynamicWeather=true
-ServerDayLengthMinutes=45
-ServerNightLengthMinutes=20
-bServerWhitelist=false
-bEnableGlobalChat=false
-bSpawnPlants=true
-bSpawnAI=true
-AISpawnInterval=40
-bEnableMigration=true
-MaxMigrationTime=5400
-GrowthMultiplier=1
-bEnableMutations=true
+MaxPlayerCount=100 // 100+ player servers is not recommended.
+bEnableHumans=false // Set to true if you want to run around with a flashlight and kick an animal.
+bQueueEnabled=false // Enable queue if server slots are all filled.
+QueuePort=10000 // Queue port. This port must be open if Queueing is enabled.
+bServerPassword=false // Set to true if you want a server password.
+ServerPassword="password here" // Your server password.
+bRconEnabled=false // Enable RCON.
+RconPassword="password here" // RCON password. Do not give this out.
+RconPort=8888
+// bServerDynamicWeather=true // Checking to see if this is replaced by randomweather
+bRandomWeatherEnabled=true // Enable/Disable Weather Variation  (added 0.17.54) Checking to see if this variable is correct as is or should be = true/false
+MinWeatherVariationInterval=600 // Set in seconds how often to switch weather - added v0.17.54
+MaxWeatherVariationInterval=900 // Set in seconds how often to switch weather - added v0.17.54
+ServerDayLengthMinutes=45 // Set in minutes.
+ServerNightLengthMinutes=20 // Set in minutes.
+bServerWhitelist=false // Set the server whitelist. If true, will look for whitelistIDs in the TIGameStateBase category.
+bEnableGlobalChat=false // Enabling the Global Chat panel.
+bSpawnPlants=true // Enable plant food spawns.
+PlantSpawnMultiplier=1 //Multiplies how many plants to spawn, rise this value to increase plant spawn amount - Added v0.17.54
+bSpawnAI=true // Enable AI spawns.
+AIDensity=1 // Added v0.17.54 - No notes from developers
+AISpawnInterval=40 // Set how frequently AI can spawn in seconds.
+MaxMigrationTime=5400 // Value is in seconds. This controls how long the migration zones should last.
+GrowthMultiplier=1 //Universal multiplier for growth. Putting this number too high will break it. Recommendation is no higher than 20, even for lulz.
+bEnableMutations=true // Enable mutations.
+bUseRegionSpawning=false //Enable region spawn
+bUseRegionSpawnCooldown=true //Enable region cooldown
+RegionSpawnCooldownTimeSeconds=600 //Region cooldown max time.
+CorpseDecayMultiplier=1 //Multiplies how fast corpses decay to despawn - Reduce value to be faster Added v0.17.54
+bAllowRecordingReplay=true //Enable replays.
+bEnableDiets=true //Enable/Disable diets, no more buffs
+bEnableMigration=true //Disable/Enable Migrations, include Patrols and Mass
+SpeciesMigrationTime=10800 //Max time a species MZ stays active
+bEnableMassMigration=true //Enable/Disable Mass migration
+MassMigrationTime=43200 //Value is in seconds 12h - How often new mass migration is set
+MassMigrationDisableTime=7200 // Value is in seconds 2h - How long a mass migration last once set
+bEnablePatrolZones=true //Enable/Disable PatrolZone system
+
+// Add the names of each AI class that should be disabled, one line for each.
+// DisallowedAIClasses=Compsognathus
+// DisallowedAIClasses=Pterodactylus
+// DisallowedAIClasses=Boar
+// DisallowedAIClasses=Deer
+// DisallowedAIClasses=Goat
+// DisallowedAIClasses=Seaturtle
 
 [/Script/TheIsle.TIGameStateBase]
-AdminsSteamIDs=
-WhitelistIDs=
+AdminsSteamIDs=Admin steam ID here // SteamID64 format
+WhitelistIDs=White list steam ID here // SteamID64 format. NOTE: Must be enabled in the game session below. Keep this empty if whitelist is disabled
+VIPs=Steam ID here // Added v0.17.54 - reportedly allows bypass of queue when server is full. 
+// List of all enabled classes. Remove a line to remove a class from spawning. - Can also be managed in Admin Panel in real time.
 AllowedClasses=Hypsilophodon
 AllowedClasses=Pachycephalosaurus
 AllowedClasses=Stegosaurus
@@ -41,54 +67,50 @@ AllowedClasses=Beipiaosaurus
 AllowedClasses=Gallimimus
 AllowedClasses=Dilophosaurus
 AllowedClasses=Herrerasaurus
-AllowedClasses=Tyrannosaurus
 
-// List of all enabled mutations and values. Keep commented out to have all mutations enabled. Enabling any mutations means you must include all mutations you would like available on your server. Listed below are all modifiable mutations with default values. Altering these values may produce unstable gameplay.
-// EnabledMutations=(MutationName=Hemomania,EffectValue=0.05)
-// EnabledMutations=(MutationName=Hematophagy,EffectValue=0.25)
-// EnabledMutations=(MutationName=Accelerated Prey Drive,EffectValue=0.1)
-// EnabledMutations=(MutationName=Xerocole Adaptation,EffectValue=0.2)
-// EnabledMutations=(MutationName=Hypervigilance,EffectValue=0.5)
-// EnabledMutations=(MutationName=Truculency,EffectValue=0.2)
-// EnabledMutations=(MutationName=Osteophagic,EffectValue=0.15)
-// EnabledMutations=(MutationName=Photosynthetic Regeneration,EffectValue=0.1)
-// EnabledMutations=(MutationName=Cellular Regeneration,EffectValue=0.15)
-// EnabledMutations=(MutationName=Advanced Gestation,EffectValue=0.5)
-// EnabledMutations=(MutationName=Sustained Hydration,EffectValue=0.2)
-// EnabledMutations=(MutationName=Enlarged meniscus,EffectValue=0.15)
-// EnabledMutations=(MutationName=Efficient Digestion,EffectValue=0.2)
-// EnabledMutations=(MutationName=Featherweight EffectValue=0.5)
-// EnabledMutations=(MutationName=Osteosclerosis,EffectValue=0.2)
-// EnabledMutations=(MutationName=Wader,EffectValue=0.25)
-// EnabledMutations=(MutationName=Epidermal Fibrosis,EffectValue=0.15)
-// EnabledMutations=(MutationName=Congenital Hypoalgesia,EffectValue=0.15)
-// EnabledMutations=(MutationName=Photosynthetic Tissue,EffectValue=0.05)
-// EnabledMutations=(MutationName=Nocturnal,EffectValue=0.05)
-// EnabledMutations=(MutationName=Hydroregenerative,EffectValue=0.25)
-// EnabledMutations=(MutationName=Increased Inspiratory Capacity,EffectValue=0.15)
-// EnabledMutations=(MutationName=Hydrodynamic,EffectValue=0.15)
-// EnabledMutations=(MutationName=Submerged Optical Retention,EffectValue=0.05)
-// EnabledMutations=(MutationName=Infrasound Communication,EffectValue=0.5)
-// EnabledMutations=(MutationName=Augmented Tapetum,EffectValue=0.5)
-// EnabledMutations=(MutationName=Hypermetabolic Inanition,EffectValue=0.15)
-// EnabledMutations=(MutationName=Tactile Endurance,EffectValue=0.5)
-// EnabledMutations=(MutationName=Gastronomic Regeneration,EffectValue=0.1)
-// EnabledMutations=(MutationName=Heightened Ghrelin,EffectValue=0.25)
-// EnabledMutations=(MutationName=Prolific Reproduction,EffectValue=0.1)
-// EnabledMutations=(MutationName=Enhanced Digestion,EffectValue=0.1)
-// EnabledMutations=(MutationName=Reinforced Tendons,EffectValue=0.1)
-// EnabledMutations=(MutationName=Multichambered Lungs,EffectValue=0.05)
-// EnabledMutations=(MutationName=Reabsorption,EffectValue=1) ****** // Value must be 1 or remove from this list to disable it.
-// EnabledMutations=(MutationName=Cannibalistic,EffectValue=1) ******// Value must be 1 or remove from this list to disable it.
-// EnabledMutations=(MutationName=Barometric Sensitivity,EffectValue=1) ******// Value must be 1 or remove from this list to disable it.
-// EnabledMutations=(MutationName=Social Behavior,EffectValue=1) *****// Value must be 1 or remove from this list to disable it.
-// EnabledMutations=(MutationName=Traumatic Thrombosis,EffectValue=1) *****// Value must be 1 or remove from this list to disable it.
-// EnabledMutations=(MutationName=Reniculate Kidneys,EffectValue=1) *****// Value must be 1 or remove from this list to disable it.
-
-// Add the names of each AI class that should be disabled, one line for each.
-// DisallowedAIClasses=Compsognathus
-// DisallowedAIClasses=Pterodactylus
-// DisallowedAIClasses=Boar
-// DisallowedAIClasses=Deer
-// DisallowedAIClasses=Goat
-// DisallowedAIClasses=Seaturtle
+// List of all enabled mutations and values. Keep commented out to have all mutations enabled.
+// Enabling any mutations means you must include all mutations you would like available on your
+// server. Listed below are all modifiable mutations with default values. Altering these values may
+// produce unstable gameplay.
+EnabledMutations=(MutationName="Hemomania",EffectValue=0.05)
+EnabledMutations=(MutationName="Hematophagy",EffectValue=0.25)
+EnabledMutations=(MutationName="Accelerated Prey Drive",EffectValue=0.1)
+EnabledMutations=(MutationName="Xerocole Adaptation",EffectValue=0.2)
+EnabledMutations=(MutationName="Hypervigilance",EffectValue=0.5)
+EnabledMutations=(MutationName="Truculency",EffectValue=0.05)
+EnabledMutations=(MutationName="Osteophagic",EffectValue=0.15)
+EnabledMutations=(MutationName="Photosynthetic Regeneration",EffectValue=0.1)
+EnabledMutations=(MutationName="Cellular Regeneration",EffectValue=0.15)
+EnabledMutations=(MutationName="Advanced Gestation",EffectValue=0.5)
+EnabledMutations=(MutationName="Sustained Hydration",EffectValue=0.2)
+EnabledMutations=(MutationName="Efficient Digestion",EffectValue=0.2)
+EnabledMutations=(MutationName="Featherweight",EffectValue=0.5)
+EnabledMutations=(MutationName="Osteosclerosis",EffectValue=0.2)
+EnabledMutations=(MutationName="Wader",EffectValue=0.25)
+EnabledMutations=(MutationName="Epidermal Fibrosis",EffectValue=0.15)
+EnabledMutations=(MutationName="Congenital Hypoalgesia",EffectValue=0.15)
+EnabledMutations=(MutationName="Photosynthetic Tissue",EffectValue=0.05)
+EnabledMutations=(MutationName="Nocturnal",EffectValue=0.05)
+EnabledMutations=(MutationName="Hydroregenerative",EffectValue=0.25)
+EnabledMutations=(MutationName="Increased Inspiratory Capacity",EffectValue=0.15)
+EnabledMutations=(MutationName="Hydrodynamic",EffectValue=0.15)
+EnabledMutations=(MutationName="Submerged Optical Retention",EffectValue=0.05)
+EnabledMutations=(MutationName="Infrasound Communication",EffectValue=0.5)
+EnabledMutations=(MutationName="Augmented Tapetum",EffectValue=1)
+EnabledMutations=(MutationName="Hypermetabolic Inanition",EffectValue=0.25)
+EnabledMutations=(MutationName="Tactile Endurance",EffectValue=0.5)
+EnabledMutations=(MutationName="Gastronomic Regeneration",EffectValue=0.1)
+EnabledMutations=(MutationName="Heightened Ghrelin",EffectValue=0.25)
+EnabledMutations=(MutationName="Prolific Reproduction",EffectValue=0.1)
+EnabledMutations=(MutationName="Enhanced Digestion",EffectValue=0.1)
+EnabledMutations=(MutationName="Reinforced Tendons",EffectValue=0.5)
+EnabledMutations=(MutationName="Multichambered Lungs",EffectValue=0.05)
+EnabledMutations=(MutationName="Enlarged meniscus",EffectValue=1) // Value must be 1 or remove from this list to disable it.
+EnabledMutations=(MutationName="Reabsorption",EffectValue=1)  // Value must be 1 or remove from this list to disable it.
+EnabledMutations=(MutationName="Cannibalistic",EffectValue=1) // Value must be 1 or remove from this list to disable it.
+EnabledMutations=(MutationName="Barometric Sensitivity",EffectValue=1) // Value must be 1 or remove from this list to disable it.
+EnabledMutations=(MutationName="Social Behavior",EffectValue=1) // Value must be 1 or remove from this list to disable it.
+EnabledMutations=(MutationName="Traumatic Thrombosis",EffectValue=1) // Value must be 1 or remove from this list to disable it.
+EnabledMutations=(MutationName="Reniculate Kidneys",EffectValue=1) // Value must be 1 or remove from this list to disable it.
+EnabledMutations=(MutationName="NHJ-INF",EffectValue=1)  // Admin controlled zombie infection
+EnabledMutations=(MutationName="NHJ-UND",EffectValue=1)  // Admin controlled zombie infection
